--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171683661-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-171683661-1');
+    </script>
     <link rel="apple-touch-icon" sizes="180x180" href="files/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="files/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="files/favicon-16x16.png">
