Rename userinfo.png (lowercase)

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div id="feature-container">
     <div id="title-image">Fill a web-services with methods you need</div>
     <div class="minidarksection"></div>
-    <div class="methodslistimage"><img src="files/Userinfo.png"></div>
+    <div class="methodslistimage"><img src="files/userinfo.png"></div>
 </div>
 
 <div id="feature-container">
